--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,10 +4,7 @@
     "slug": "aTestProject",
     "privacy": "public",
     "sdkVersion": "32.0.0",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -19,11 +16,15 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
+    },
+    "android": {
+      "package": "com.decode.helloworld",
+      "config": {
+        "googleMaps": { "apikey": "AIzaSyBJp31wdd16862J0Vevyzbie4DN3CLOfq8" }
+      }
     }
   }
 }
