--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "react-devtools": "^3.6.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-google-signin": "^1.1.0",
+    "react-native-geolocation-service": "^2.0.0",
+    "react-native-image-picker-form": "^0.2.5",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
