--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,10 @@
     "native-base": "^2.11.0",
     "react": "16.5.0",
     "react-devtools": "^3.6.0",
+    "react-geocode": "^0.1.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-google-signin": "^1.1.0",
     "react-native-geolocation-service": "^2.0.0",
+    "react-native-google-signin": "^1.1.0",
     "react-native-image-picker-form": "^0.2.5",
     "react-navigation": "^3.0.9",
     "react-redux": "^6.0.0",
