--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "expo": "^32.0.0",
     "firebase": "^5.8.3",
     "global": "^4.3.2",
+    "moment": "^2.24.0",
     "native-base": "^2.11.0",
     "react": "16.5.0",
     "react-devtools": "^3.6.0",
