--- a/frontend/app.json
+++ b/frontend/app.json
@@ -4,7 +4,10 @@
     "slug": "aTestProject",
     "privacy": "public",
     "sdkVersion": "32.0.0",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -16,15 +19,20 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "package": "com.decode.helloworld",
       "config": {
-        "googleMaps": { "apikey": "AIzaSyAEV5dCEc0FdSkrJoz0o2KI-opfok_Rtr4" }
+        "googleMaps": {
+          "apikey": "AIzaSyAEV5dCEc0FdSkrJoz0o2KI-opfok_Rtr4"
+        }
       }
-    }
+    },
+    "description": ""
   }
 }
