--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "file-system": "^2.2.2",
     "fs": "0.0.1-security",
     "mongodb": "^3.1.13",
+    "multer": "^1.4.1",
     "sha256": "^0.2.0"
   }
 }
