--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "firebase": "^5.8.3",
     "global": "^4.3.2",
     "moment": "^2.24.0",
+    "multer": "^1.4.1",
     "native-base": "^2.11.0",
     "react": "16.5.0",
     "react-devtools": "^3.6.0",
